sas-core/main/default/objects/Account/fields/Amadeus_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Amadeus_Office_ID__c</fullName>
    <description>Office ID used for travel agencies bulk</description>
    <externalId>true</externalId>
    <inlineHelpText>Amadeus Office ID for travel agency</inlineHelpText>
    <label>Amadeus Office ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>