sas-core/main/default/objects/Account/fields/CMP__c.field-meta.xml
<CustomField>
    <fullName>CMP__c</fullName>
    <description>CMP code for customer</description>
    <label>Company Code (CMP)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>