sas-core/main/default/objects/Account/fields/CODSId__c.field-meta.xml
<CustomField>
    <fullName>CODSId__c</fullName>
    <description>Unique identifier for customer in CODA. Corresponds to ExternalId on Frequent Flyer.</description>
    <externalId>true</externalId>
    <label>CODS Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>