sas-core/main/default/objects/Account/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <description>Name of company that customer is connected to</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>