sas-core/main/default/objects/Account/fields/ConcentEmail__c.field-meta.xml
<CustomField>
    <fullName>ConcentEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given concent to receive Email</description>
    <label>Concent Email</label>
    <type>Checkbox</type>
</CustomField>