sas-core/main/default/objects/Account/fields/ConcentEuroBonus__c.field-meta.xml
<CustomField>
    <fullName>ConcentEuroBonus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given concent to EuroBonus</description>
    <label>Concent EuroBonus</label>
    <type>Checkbox</type>
</CustomField>