sas-core/main/default/objects/Account/fields/ConcentSMS__c.field-meta.xml
<CustomField>
    <fullName>ConcentSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given concent to receive SMS</description>
    <label>Concent SMS</label>
    <type>Checkbox</type>
</CustomField>