sas-core/main/default/objects/Account/fields/ConcentTelemarketing__c.field-meta.xml
<CustomField>
    <fullName>ConcentTelemarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given concent to Telemarketing</description>
    <label>Concent Telemarketing</label>
    <type>Checkbox</type>
</CustomField>