sas-core/main/default/objects/Account/fields/CustomerIdentifier__c.field-meta.xml
<CustomField>
    <fullName>CustomerIdentifier__c</fullName>
    <description>Customer Identifier in SAS source systems</description>
    <externalId>true</externalId>
    <label>Customer Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>