sas-core/main/default/objects/Account/fields/EBBalance__c.field-meta.xml
<CustomField>
    <fullName>EBBalance__c</fullName>
    <description>EuroBonus Balance for customer</description>
    <label>EuroBonus Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>