sas-core/main/default/objects/Account/fields/EBLevel__c.field-meta.xml
<CustomField>
    <fullName>EBLevel__c</fullName>
    <description>Current EuroBonus level/tier for customer</description>
    <label>EuroBonus Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EuroBonusLevel</valueSetName>
    </valueSet>
</CustomField>