sas-core/main/default/objects/Account/fields/EBMbrshipLvlStatusEndDate__c.field-meta.xml
<CustomField>
    <fullName>EBMbrshipLvlStatusEndDate__c</fullName>
    <description>End of current status level for customer&#39;s EuroBonus engagement</description>
    <label>EB Level End Date</label>
    <type>Date</type>
</CustomField>