sas-core/main/default/objects/Account/fields/EBMbrshipLvlStatusStartDate__c.field-meta.xml
<CustomField>
    <fullName>EBMbrshipLvlStatusStartDate__c</fullName>
    <description>Start of membership level for customer EuroBonus engagement</description>
    <label>EB Level Start Date</label>
    <type>Date</type>
</CustomField>