sas-core/main/default/objects/Account/fields/EBQualifyingPeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>EBQualifyingPeriodEndDate__c</fullName>
    <description>End date for the customer&#39;s current qualifying period for EuroBonus</description>
    <label>Qualifying Period End</label>
    <type>Date</type>
</CustomField>