sas-core/main/default/objects/Account/fields/EBQualifyingPeriodStartDate__c.field-meta.xml
<CustomField>
    <fullName>EBQualifyingPeriodStartDate__c</fullName>
    <description>Start of qualifying period for customer EuroBonus engagement</description>
    <label>Qualifying Period Start</label>
    <type>Date</type>
</CustomField>