sas-core/main/default/objects/Account/fields/EBReachesNextLevelPoints__c.field-meta.xml
<CustomField>
    <fullName>EBReachesNextLevelPoints__c</fullName>
    <description>Amount of points when the EuroBonus customer reaches the next EuroBonus level</description>
    <label>Reaches Next Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>