sas-core/main/default/objects/Account/fields/FCS_ConsentEmail__c.field-meta.xml
<CustomField>
    <fullName>FCS_ConsentEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given consent to receive Email</description>
    <label>Consent Email</label>
    <type>Checkbox</type>
</CustomField>