sas-core/main/default/objects/Account/fields/FCS_ConsentTelemarketing__c.field-meta.xml
<CustomField>
    <fullName>FCS_ConsentTelemarketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that customer has given consent to Telemarketing</description>
    <label>Consent Telemarketing</label>
    <type>Checkbox</type>
</CustomField>