sas-core/main/default/objects/Account/fields/FCS_EBNumber__c.field-meta.xml
<CustomField>
    <fullName>FCS_EBNumber__c</fullName>
    <description>EuroBonus number of customer</description>
    <externalId>true</externalId>
    <label>EuroBonus Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>