sas-core/main/default/objects/Account/fields/FCS_FrequentFlyer__c.field-meta.xml
<CustomField>
    <fullName>FCS_FrequentFlyer__c</fullName>
    <description>Reference to external Frequent Flyer record holding data from SAS source systems</description>
    <inlineHelpText>External Frequent Flyer record holding data from SAS source systems</inlineHelpText>
    <label>Frequent Flyer</label>
    <length>255</length>
    <referenceTo>FCS_FrequentFlyer__x</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>ExternalLookup</type>
</CustomField>