sas-core/main/default/objects/Account/fields/FCS_LastRetrievedFromSource__c.field-meta.xml
<CustomField>
    <fullName>FCS_LastRetrievedFromSource__c</fullName>
    <description>Datetime for when this account was last retrieved from source system. Used to determine if customer should be retrieved at certain points in time, e.g. when opening a case.</description>
    <label>Last Retrieved From Source</label>
    <type>DateTime</type>
</CustomField>