sas-core/main/default/objects/Account/fields/FCS_TPAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>FCS_TPAccountNumber__c</fullName>
    <description>Travel Pass Account Number for customer</description>
    <externalId>true</externalId>
    <label>Travel Pass Account Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>