sas-core/main/default/objects/Account/fields/FCS_Wiped__c.field-meta.xml
<CustomField>
    <fullName>FCS_Wiped__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the customer data has been wiped from the account</description>
    <label>Wiped</label>
    <type>Checkbox</type>
</CustomField>