sas-core/main/default/objects/Account/fields/Form_of_Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Form_of_Payment_Details__c</fullName>
    <description>Details of the form or payment</description>
    <inlineHelpText>The format is NC1234567 when the form of payment is SAS Invoice (Name Credit)</inlineHelpText>
    <label>Form of Payment Details</label>
    <length>9</length>
    <type>Text</type>
</CustomField>