sas-core/main/default/objects/Account/fields/IATA_Level__c.field-meta.xml
<CustomField>
    <fullName>IATA_Level__c</fullName>
    <description>For B2B Travelagent customers store their priority.</description>
    <label>IATA Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>