sas-core/main/default/objects/Account/fields/SubscriptionId__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionId__c</fullName>
    <description>Unique identifier for customer&#39;s subscription engagement</description>
    <externalId>true</externalId>
    <label>Subscription Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>