sas-core/main/default/objects/Account/fields/TPAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>TPAccountNumber__c</fullName>
    <description>Travel Pass Account Number for customer</description>
    <label>Travel Pass Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>