sas-core/main/default/objects/Account/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <description>Companies that are customers of SAS</description>
    <label>B2B - Customer</label>
</RecordType>