sas-core/main/default/objects/Account/recordTypes/Partner.recordType-meta.xml
<RecordType>
    <fullName>Partner</fullName>
    <active>true</active>
    <label>B2B - Partner</label>
</RecordType>