sas-core/main/default/objects/Account/validationRules/Payment_Details_Format_SASInvoiceNCredit.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Details_Format_SASInvoiceNCredit</fullName>
    <active>true</active>
    <description>Validates that the form for payment details formating</description>
    <errorConditionFormula>IF(ISPICKVAL(Form_of_Payment__c , &quot;SAS Invoice(Name Credit)&quot;),  NOT(REGEX( Form_of_Payment_Details__c ,&quot;[A-Z]{2}[0-9]{7}&quot;)), FALSE)</errorConditionFormula>
    <errorDisplayField>Form_of_Payment_Details__c</errorDisplayField>
    <errorMessage>Payments Details for SAS Invoice( Name Credit ) format is XX1234567. Two capital letters followed by 7 numbers</errorMessage>
</ValidationRule>